feat(recipes): implement recipe filtering
- add tests
- filter recipes by username, cooking time or a keyword/string
- include pagination metadata in recipe fetching responses

[Finishes #164139784]
